--- a/HW1/main.tex
+++ b/HW1/main.tex
@@ -60,7 +60,7 @@
 \title{ \normalsize \textsc{}
 		\\ [2.0cm]
 		\HRule{1.5pt} \\
-		\LARGE \textbf{\uppercase{MATH 562: Stochastic Simulation}
+		\LARGE \textbf{\uppercase{MATH 562: Statistical Inference}
 		\HRule{2.0pt} \\ [0.6cm] \LARGE{Homework 1} \vspace*{10\baselineskip}}
 		}
 \date{}
